K/k8s-node-image-1-14-NXHudmToprGSe/k8s-node-image-1-14.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-k8s-node-image-1-14-ana
  labels:
    app.kubernetes.io/name: k8s-node-image-1-14
    helm.sh/chart: k8s-node-image-1-14-0.1.58
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: anaconda
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s-node-image-1-14
    app.kubernetes.io/instance: release-name
    svc: anaconda
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-k8s-node-image-1-14-node
  labels:
    app.kubernetes.io/name: k8s-node-image-1-14
    helm.sh/chart: k8s-node-image-1-14-0.1.58
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: k8s-node
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s-node-image-1-14
    app.kubernetes.io/instance: release-name
    svc: k8s-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-k8s-node-image-1-14-ana
  labels:
    app.kubernetes.io/name: k8s-node-image-1-14
    helm.sh/chart: k8s-node-image-1-14-0.1.58
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: anaconda
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-node-image-1-14
      app.kubernetes.io/instance: release-name
      svc: anaconda
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-node-image-1-14
        app.kubernetes.io/instance: release-name
        svc: anaconda
    spec:
      containers:
        - name: main
          command:
            - nginx
            - -g
            - daemon off;
          image: docker.io/pnnlmiscscripts/anaconda:20200421-1700-nginx-1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - nginx -s quit
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-k8s-node-image-1-14-node
  labels:
    app.kubernetes.io/name: k8s-node-image-1-14
    helm.sh/chart: k8s-node-image-1-14-0.1.58
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    svc: k8s-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-node-image-1-14
      app.kubernetes.io/instance: release-name
      svc: k8s-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-node-image-1-14
        app.kubernetes.io/instance: release-name
        svc: k8s-node
    spec:
      containers:
        - name: main
          command:
            - nginx
            - -g
            - daemon off;
          image: docker.io/pnnlmiscscripts/k8s-node-image:1.14.10-nginx-7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - nginx -s quit
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-k8s-node-image-1-14
  labels:
    app.kubernetes.io/name: k8s-node-image-1-14
    helm.sh/chart: k8s-node-image-1-14-0.1.58
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /1.14.10-nginx-7/?(.*)$
            backend:
              serviceName: release-name-k8s-node-image-1-14-node
              servicePort: http
          - path: /1.14.10-nginx-7/(vmlinuz$)
            backend:
              serviceName: release-name-k8s-node-image-1-14-ana
              servicePort: http
          - path: /1.14.10-nginx-7/(initrd.img$)
            backend:
              serviceName: release-name-k8s-node-image-1-14-ana
              servicePort: http
          - path: /1.14.10-nginx-7/images/pxeboot/(vmlinuz$)
            backend:
              serviceName: release-name-k8s-node-image-1-14-ana
              servicePort: http
          - path: /1.14.10-nginx-7/images/pxeboot/(initrd.img$)
            backend:
              serviceName: release-name-k8s-node-image-1-14-ana
              servicePort: http
          - path: /1.14.10-nginx-7/(LiveOS$|LiveOS/.*)
            backend:
              serviceName: release-name-k8s-node-image-1-14-ana
              servicePort: http
          - path: /1.14.10-nginx-7/(.treeinfo$)
            backend:
              serviceName: release-name-k8s-node-image-1-14-ana
              servicePort: http
